Added richardson extrapolation script. Currently difficult to use, but working.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Simple solver for stokes equation with temperature Advection/Diffusion. Eigen3 and libhdf5-dev packages are required to run.
+Simple solver for stokes equation with temperature Advection/Diffusion. 
+Eigen3 and libhdf5-dev packages are required to compile and run.
+Using VISIT for visualization is suggested, since many of the convergence analysis scripts are written using the Python VISIT Interface.
