--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![githalytics.com alpha](https://cruel-carlota.pagodabox.com/35b2b5240176d130f6c10fb7e474f23a "githalytics.com")](http://githalytics.com/TedStudley/mc-mini)
+
 Simple solver for stokes equation with temperature Advection/Diffusion. 
 Eigen3 and libhdf5-dev packages are required to compile and run.
 Using VISIT for visualization is suggested, since many of the convergence analysis scripts are written using the Python VISIT Interface.
